2002-04-26  Sven Neumann  <sven@gimp.org>
 
        * tests/testtreecolumns.c
        * tests/testtreeview.c: quit the main loop when the window is
        destroyed. Removed compiler warnings about wrong format in printf().
 
Fri Apr 26 21:46:42 2002  Kristian Rietveld  <kris@gtk.org>

	This commit fixes binary compatibility, which I broke with my
	recent cell renderer commits :/.

	* gtk/gtkcellrenderer.h: move cell_background out of _GtkCellRenderer

	* gtk/gtkcellrenderer.c: create GtkCellRendererInfo, with the
	cell_background field and use this as object data. This way we keep
	the field private and dont break ABI.

	* gtk/gtkcellrendererpixbuf.h: remove stock_id, stock_size and
	stock_detail from _GtkCellRendererPixbuf

	* gtk/gtkcellrendererpixbuf.c: create a GtkCellRendererPixbufInfo
	with above mentioned fields. And update everything.

Fri Apr 26 21:42:02 2002  Kristian Rietveld  <kris@gtk.org>

	* gdk/x11/gdkdrawable-x11.h: include X11/Xlib.h, fixes the build

Fri Apr 26 10:34:15 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/Makefile.am (libgdk_x11_la_SOURCES): Add
	missing gdkscreen/display-x11.h files.

Thu Apr 25 16:51:40 2002  Owen Taylor  <otaylor@redhat.com>

	Start of integration of Erwann Chenede's multihead work
	from the gtk-multihead branch.

	* gdk/gdkdisplay.[ch] gdk/gdkscreen.[ch]
	gdk/x11/gdkdisplay-x11.[ch] gdk/x11/gdkscreen-x11.[ch]
	New classes representing a set of screens with attached
	input devices and a single contiguous area, respectively.

	* gdk/gdk.[ch] gdk/gdkinternals.h gdk/x11/gdkmain-x11.c:
	gdk/x11/gdkprivate-x11.h: Make the initialization interface
	simple _gdk_windowing_init() and do the rest in
	gdk_open_display() calls.

	* gdk/gdk.[ch]: Add gdk_parse_args() which can be used
	to do the display-independent part of initialization
	instead of gdk_init_[check].

	* gdk/gdkcursor.h gdk/gdkfont.h gdk/gdkkeys.h gdk/gdkpixmap.h
	gdk/gdkproperty.h gdk/gdkselection.h gdk/gdkwindow.h: